# motion_capture

./: .gitignore  README.md  kevin_setup.bash  kevin_setup.zsh  requirements.txt  setup.zsh
data/: point_data_02171745.csv
data/param/: matlab_stereo_param.yaml
data/parameter/: body_distance.yaml  create_markers.yaml  create_markers0.yaml  create_markers1.yaml  marker_body.yaml  matlab_stereo_param.yaml  matlab_stereo_param_1.yaml  matlab_stereo_param_2.yaml  matlab_stereo_param_3.yaml  test.yaml
data/point_path/: point_path_data_01.csv  point_path_data_05.csv  point_path_data_06.csv  point_path_data_07.csv  point_path_data_08.csv  point_path_data_09.csv  point_path_data_1.csv
data/result/: .~lock.point_result.csv#  input_data.csv  input_data_.csv  point_data.csv  point_data_20220307.csv  point_data_45deg.csv  point_data_angle.csv  point_data_angle_2.csv  (+16 more)
doc/: video timings.ods
example/: epipolar_line.py  find_body.py  find_rt.py  gen_miss_point.py  gen_point_axis.py  main.py
param/: matlab_stereo_param.yaml
src/image_processing/ir_track/: CMakeLists.txt
src/image_processing/ir_track/src/: ir_track.cpp  ir_track.py  ir_track_boostpy.cpp  point_record.py  stero_ir_track.py  test.cpp  test.py
src/image_processing/light_track/: CMakeLists.txt
src/image_processing/light_track/src/: combine_data.py  ir_point_record.py  ir_track.cpp  ir_track.py  ros2_point2world.cpp  ros2_stero_light_track.py  ros_point_record.py  ros_stero_light_track.py  stero_ir_track.py
test/: Makefile  c8_4.py  combinations.py  qt_plot.py  solve_point.py  test  test.c  test.py
(+719 files in other folders)
